# api_tests

./: .gitignore  README.md
api_tests_demoshop/: pyproject.toml
api_tests_demoshop/tests/: test_login.py
reqres_tests/: conftest.py  test_create_user.py  test_delete_user.py  test_register_user.py  test_successful_login.py  test_update_user.py
schemas/: reqres_schemas.py
utils/: base_session.py
